# Canvas2Slack

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs  settings.rs
