[package]
name = "canvas2slack"
version = "0.1.0"
authors = ["rp185312"]
edition = "2018"

[dependencies]
slack_api = "0.21.0"
serde = "1.0.93"
serde_json = "1.0.39"
xml-rs = "0.8.0"
reqwest = "0.9.18"
chrono = "0.4.7"

[dependencies.config]
version = "0.9"
default-features = false
features = ["json"]