[package]
name = "canvas2slack"
version = "0.1.0"
authors = ["rp185312"]
edition = "2018"

[dependencies]
slack_api = "0.21.0"
serde = "1.0.104"
serde_json = "1.0.44"
xml-rs = "0.8.0"
reqwest = "0.9.19"
chrono = "0.4.10"
sled = "0.30.3"
scraper = "0.11"
ego-tree = "0.6"

[dependencies.config]
version = "0.9"
default-features = false
features = ["json"]
